--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,13 @@ jobs:
         run: echo "SONAR_TOKEN is set"
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Verify GITHUB_TOKEN
+        run: |
+          if [ -z "$GITHUB_TOKEN" ]; then
+            echo "GITHUB_TOKEN is not set"
+          else
+            echo "GITHUB_TOKEN is set"
+          fi
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.4 # Usa una versión estable de la acción
